efalive (2.3-1) stable; urgency=low

  * Update for Debian Jessie

 -- Kay Hannay <klinux@hannay.de>  Fri, 06 Mar 2015 18:14:21 +0100


efalive (2.2-1) stable; urgency=low

  * Improve backup restore so that efa and efaLive only backups can be restored
  * Add support for auto backup password
  * Switch from own init script to login manager solution
  * Exchange su based password check by Python solution for efaLive Setup start
  * Add function to create a log file package

 -- Kay Hannay <klinux@hannay.de>  Wed, 08 Jan 2014 20:54:21 +0200


efalive (2.1-1) unstable; urgency=low

  * Initial release
  * This is the first version of the Debian package of efaLive.

 -- Kay Hannay <klinux@hannay.de>  Wed, 01 Aug 2012 10:20:18 +0200