@@ -24,10 +24,11 @@ from daemon import runner
 
 from efalive.daemon.efalivedaemon import EfaLiveDaemon
 
-if __name__ == '__main__':
-    logging.basicConfig(filename='/tmp/efaLiveDaemon.log',level=logging.DEBUG)
+if __name__ == "__main__":
+    logging.basicConfig(filename="efaLiveDaemon.log", level=logging.DEBUG)
     daemon = EfaLiveDaemon(sys.argv)
     daemon_runner = runner.DaemonRunner(daemon)
+    # We have to preserve the logger file handle when switching to daemon mode
     daemon_runner.daemon_context.files_preserve=[logging.root.handlers[0].stream.fileno()]
     daemon_runner.do_action()
 
