@@ -1,6 +1,7 @@
 efalive (2.3-1) stable; urgency=low
 
   * Update for Debian Jessie
+  * Add efaLive daemon
 
  -- Kay Hannay <klinux@hannay.de>  Fri, 06 Mar 2015 18:14:21 +0100
 
